Remove some unneeded dependencies espicaly on Jetty.  Jetty is only needed for the JolokiaService, but it will start it's on embedded webserver should someone want to run that service. Narrow the scope of the testng dependency.